# src/modules/accounts/useCases/resetPasswordUser/ResetPasswordUserController.ts
@@ -1,0 +1,18 @@
+import { Request, Response } from "express";
+import { container } from "tsyringe";
+
+import { ResetPasswordUserUseCase } from "./ResetPasswordUserUseCase";
+
+export class ResetPasswordUserController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { token } = request.query;
+    const { password } = request.body;
+
+    const resetPasswordUserUseCase = container.resolve(
+      ResetPasswordUserUseCase
+    );
+
+    await resetPasswordUserUseCase.execute({ token: String(token), password });
+    return response.send();
+  }
+}
